# DownpourEngine

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  cleanup.sh  runtest.sh
src/: Asset.h  BaseTypes.h  Property.h  Resource.h  ResourceHandle.h  ResourceManager.h  ResourceTestMain.cpp
src/serialization/: Serializable.h  SerializedProperty.h
src/tests/: ResourceTestMain.cpp
src/utils/: Defer.h  Property.h  Singleton.h
